api et fonctionnalité avancée