@@ -87,12 +87,14 @@
             <artifactId>service</artifactId>
             <version>0.18.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20231013</version>
+            <version>20240303</version>
         </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
@@ -123,15 +125,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                    <fork>true</fork>
-                    <encoding>UTF-8</encoding>
-                </configuration>
+
             </plugin>
         </plugins>
     </build>
